integerate logged in user with feed