@@ -6,27 +6,29 @@ import io.mountblue.reddit.redditClone.model.User;
 import io.mountblue.reddit.redditClone.service.TopicService;
 import io.mountblue.reddit.redditClone.service.UserService;
 import jakarta.validation.Valid;
+import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
+
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
 import java.util.stream.Collectors;
 
 @Controller
+@AllArgsConstructor
 public class UserRegistrationController {
 
     private final UserService userService;
     private final TopicService topicService;
+    private final BCryptPasswordEncoder bCryptPasswordEncoder;
 
-    @Autowired
-    public UserRegistrationController(UserService userService, TopicService topicService) {
-        this.userService = userService;
-        this.topicService = topicService;
-    }
 
     @GetMapping("/register")
     public String showRegistrationForm(Model model) {
@@ -58,14 +60,20 @@ public class UserRegistrationController {
             return "user-registration";
         }
 
-        List<Topic> interests = userDto.getInterestIds().stream()
-                .map(topicId -> topicService.findById(topicId))
-                .collect(Collectors.toList());
+        List<Topic> interests = new ArrayList<>();
+        if(userDto.getInterestIds()!=null){
+             interests= userDto.getInterestIds().stream()
+                    .map(topicService::findById)
+                    .toList();
+        }
 
+        Random random = new Random();
+        int randomNumber = random.nextInt(29) + 1;
         userDto.setInterests(interests);
-
         User user = userService.mapDtoToEntity(userDto);
+        user.setPassword(bCryptPasswordEncoder.encode(userDto.getPassword()));
+        user.setProfilePic("beanhead-"+randomNumber+".svg");
         userService.createUser(user);
-        return "user-registration";
+        return "redirect:/login-page";
     }
 }
